[gd_scene load_steps=3 format=3 uid="uid://ddg2wjc6sn8ju"]

[ext_resource type="Script" path="res://src/scripts/pause.gd" id="1_84ool"]
[ext_resource type="Theme" uid="uid://cms61kldfd47s" path="res://assets/theme.tres" id="1_spvme"]

[node name="Pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_84ool")

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
z_index = 20
layout_mode = 0
offset_top = 82.0
offset_right = 433.0
offset_bottom = 404.0
theme = ExtResource("1_spvme")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1_spvme")

[node name="TopMargin" type="Panel" parent="PanelContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 38)
layout_mode = 2

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 2.0
theme = ExtResource("1_spvme")
text = "             RESUME              "
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 2.0
theme = ExtResource("1_spvme")
text = "             RESTART              "
icon_alignment = 1
vertical_icon_alignment = 0

[node name="MainMenu" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 2.0
theme = ExtResource("1_spvme")
text = "          BACK TO MENU          "
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 2.0
theme = ExtResource("1_spvme")
text = "               QUIT                "
icon_alignment = 1
vertical_icon_alignment = 0

[node name="BottomMargin" type="Panel" parent="PanelContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 190)
layout_mode = 2

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
